Fixing bug on IOS

--- a/style.css
+++ b/style.css
@@ -318,7 +318,7 @@ body.is-active {
   height: 100vh;
   width: 100vw;
   opacity: 0;
-  transition: 300ms ease-in-out;
+  transition: opacity 300ms ease-in-out;
   pointer-events: none;
 }
 
